# WindyTracker

./: .gitignore  404.html  Dockerfile.export  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml
api/bus/: index.html
api/train/: index.html
cta/: __init__.py  simpleapi.py  typedapi.py
docs/: index.md  quickstart.md
docs/api/: bus.md  train.md
exporter/: export.py
notebooks/: bustracker-usage.ipynb  google-times.ipynb  monitor-bus.ipynb  ride-share.ipynb  simpleapi-usage.ipynb  stats.ipynb  traintracker-usage.ipynb  typedbustracker-usage.ipynb  typedtraintracker-usage.ipynb
quickstart/: index.html
search/: search_index.json
src/: api.py  simpleapi.py  typedapi.py
src/cta/: __init__.py  bustracker.py  models.py  simpleapi.py  typedbustracker.py
src/cta/bus/: base.py  bustracker.py  models.py  typedbustracker.py
src/cta/train/: __init__.py  traintracker.py  typedtraintracker.py
src/windytracker/: __init__.py
src/windytracker/bus/: __init__.py  bustracker.py
src/windytracker/train/: base.py  models.py  typedtraintracker.py
