[project]
name = "cta"
version = "0.0.1"
description = "CTA API client for bus and train tracking"
readme = "README.md"
authors = [
    { name = "Ryan Fogle", email = "ryanfogle98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.3",
]

[project.optional-dependencies]
sync = ["requests>=2.32.3"]
async = ["aiohttp>=3.10.0"]
all = ["requests>=2.32.3", "aiohttp>=3.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "load-dotenv>=0.1.0",
    "ruff>=0.12.4",
]
